Navbar fixes
~ Made navbar fully cover the screen

--- a/Website/styles/mystyles.css
+++ b/Website/styles/mystyles.css
@@ -31,6 +31,7 @@ body {
 	height: 3.5rem;
 	background-color: #FFFFFF;
 	position: fixed;
+	z-index: 1;
 	border-bottom: 4px solid rgba(237, 237, 237, 1.00);
 }
 table {
